--- a/Sources/RefdsShared/Resource/String/pt.lproj/Localizable.strings
+++ b/Sources/RefdsShared/Resource/String/pt.lproj/Localizable.strings
@@ -1,7 +1,14 @@
-
 // MARK: - Lock Screen
-"lockScreen.title" = "Dê um passo adiante";
-"lockScreen.description" = "É com grande satisfação que o recebemos novamente. Prepare-se para uma experiência cuidadosamente projetada para atender às suas necessidades";
-"lockScreen.buttonTitle" = "Prosseguir";
-"lockScreen.requestAuthReason" = "Para proteger seus tesouros monetários, pedimos gentilmente que autentique sua identidade antes de embarcar no app";
-"lockScreen.alertAuthError" = "Parece que encontramos um pequeno obstáculo ao tentar autenticar você";
+
+"lockScreenTitle" = "Dê um passo adiante";
+"lockScreenDescription" = "É com grande satisfação que o recebemos novamente. Prepare-se para uma experiência cuidadosamente projetada para atender às suas necessidades";
+"lockScreenButtonTitle" = "Prosseguir";
+"lockScreenRequestAuthReason" = "Para proteger seus tesouros monetários, pedimos gentilmente que autentique sua identidade antes de embarcar no app";
+"lockScreenAlertAuthError" = "Parece que encontramos um pequeno obstáculo ao tentar autenticar você";
+
+// MARK: - Risk
+
+"riskLowDescription" = "Baixo";
+"riskMediumDescription" = "Médio";
+"riskHighDescription" = "Alto";
+"riskWarningDescription" = "Muito Alto";
