--- a/Sources/RefdsShared/Resource/String/en.lproj/Localizable.strings
+++ b/Sources/RefdsShared/Resource/String/en.lproj/Localizable.strings
@@ -13,3 +13,7 @@
 "riskHighDescription" = "High";
 "riskWarningDescription" = "Very High";
 
+// MARK: - Welcome
+
+"welcomeIntroduction" = "Welcome to";
+
