--- a/Sources/RefdsShared/Resource/String/pt.lproj/Localizable.strings
+++ b/Sources/RefdsShared/Resource/String/pt.lproj/Localizable.strings
@@ -12,3 +12,7 @@
 "riskMediumDescription" = "Médio";
 "riskHighDescription" = "Alto";
 "riskWarningDescription" = "Muito Alto";
+
+// MARK: - Welcome
+
+"welcomeIntroduction" = "Bem-vindo(a) ao";
