--- a/Sources/RefdsShared/Resource/String/en.lproj/Localizable.strings
+++ b/Sources/RefdsShared/Resource/String/en.lproj/Localizable.strings
@@ -3,8 +3,11 @@
 "lockScreenTitle" = "Take a step forward";
 "lockScreenDescription" = "We are pleased to welcome you again. Get ready for a carefully designed experience to meet your needs";
 "lockScreenButtonTitle" = "Proceed";
-"lockScreenRequestAuthReason" = "To safeguard your monetary treasures, we kindly request that you authenticate your identity before boarding the app";
-"lockScreenAlertAuthError" = "It seems we encountered a small obstacle while trying to authenticate you";
+"lockScreenRequestAuthReason" = "Hello! We're implementing an extra layer of security to ensure the protection of your data. We're requesting your biometrics to unlock the app, providing a more secure and convenient experience. Thank you for your understanding and cooperation!";
+"lockScreenAuthErrorNoBiometricsTitle" = "Biometrics Unavailable";
+"lockScreenAuthErrorNoBiometricsDescription" = "Biometric authentication is not available on this device.";
+"lockScreenAuthErrorTitle" = "Authentication Failed";
+"lockScreenAuthErrorDescription" = "Authentication process failed. Please try again.";
 
 // MARK: - Risk
 
