--- a/Sources/RefdsShared/Resource/String/pt.lproj/Localizable.strings
+++ b/Sources/RefdsShared/Resource/String/pt.lproj/Localizable.strings
@@ -3,8 +3,11 @@
 "lockScreenTitle" = "Dê um passo adiante";
 "lockScreenDescription" = "É com grande satisfação que o recebemos novamente. Prepare-se para uma experiência cuidadosamente projetada para atender às suas necessidades";
 "lockScreenButtonTitle" = "Prosseguir";
-"lockScreenRequestAuthReason" = "Para proteger seus tesouros monetários, pedimos gentilmente que autentique sua identidade antes de embarcar no app";
-"lockScreenAlertAuthError" = "Parece que encontramos um pequeno obstáculo ao tentar autenticar você";
+"lockScreenRequestAuthReason" = "Olá! Estamos implementando uma camada extra de segurança para garantir a proteção dos seus dados. Pedimos sua biometria para desbloquear o aplicativo, oferecendo uma experiência mais segura e conveniente. Agradecemos pela compreensão e colaboração!";
+"lockScreenAuthErrorNoBiometricsTitle" = "Biometria Indisponível";
+"lockScreenAuthErrorNoBiometricsDescription" = "A autenticação biométrica não está disponível neste dispositivo.";
+"lockScreenAuthErrorTitle" = "Falha na Autenticação";
+"lockScreenAuthErrorDescription" = "O processo de autenticação falhou. Por favor, tente novamente.";
 
 // MARK: - Risk
 
