--- a/Sources/RefdsShared/Resource/String/en.lproj/Localizable.strings
+++ b/Sources/RefdsShared/Resource/String/en.lproj/Localizable.strings
@@ -23,3 +23,7 @@
 // MARK: - Task
 
 "refdsTask" = "refds.task.%@";
+
+// MARK: - Design System
+
+"refdsMonthYearPickerViewToday" = "Today's Date";
